# coursegrab

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
src/coursegrab/: __init__.py  __main__.py  downloader.py  main.py  runner.py  zipper.py
src/coursegrab/static/: index.html
tests/: conftest.py  test_api.py  test_downloader.py  test_main_module.py
